# tmp-demo

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
data/: world_satate.json  world_state.json  world_state.yaml
scripts/: run_agent.py  run_calibration.py  run_client.py  run_environment.py  run_listener.py  run_logger.py  run_mock_env.py  run_robot_env.py  run_std_env.py
src/agent/: callbacks.py  code_interpreter.py  dto.py  service.py
src/environment/: client.py  dto.py  interface.py  remote.py  utils.py
src/environment/std_actions/: image.py  vlm.py
src/robot/: actions.py  transform.py  vision.py
src/utils/: callbacks.py  constants.py  logging.py  ws.py
web/: README.md  angular.json  package-lock.json  package.json
web/src/: index.html  proxy.conf.json  styles.scss
web/src/app/: app.component.html  app.routes.ts
web/src/app/chat-page/: chat-page.component.html  chat-page.component.ts
web/src/app/services/: chat.service.ts
