[project]
name = "robot_demo"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
dependencies = [
    "fastapi==0.115.5",
    "pydantic==2.9.2"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agent", "environment"]
package-dir = { "" = "src" }


