[project]
name = "robot_demo"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "llama-index",
    "openai",
    "ipython",
    "nbformat",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agent", "environment"]
package-dir = { "" = "src" }


[tool.black]
target-version = ["py312"]
line-length = 100
docstring-style = "google"

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
ignore = ["E741", "B028", "B006", "B008", "B019", "B023", "T201"]
select = ["E", "F", "W", "N", "B", "T"]

[tool.ruff.pydocstyle]
convention = "google"
